# Ecommerce_app

./: .env.example  LICENSE  README.md  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
blog/fixtures/: author_fixture.json  blogpost_fixture.json  blogposts_fixture.json  users_fixture.json
blog/migrations/: 0001_initial.py  0002_alter_blogpost_options.py  0002_blogpost_updated_at.py  0003_author_alter_blogpost_author.py  0004_alter_blogpost_is_published.py  0005_alter_blogpost_number_of_views.py  0006_remove_blogpost_is_published_blogpost_status_and_more.py  0007_delete_author_alter_blogpost_content_and_more.py  0008_alter_blogpost_preview.py  0009_alter_blogpost_preview.py
blog/services/: blogpost_service.py
catalog/: admin.py  context_processors.py  forms.py  models.py  urls.py  utils.py  views.py
catalog/data/: spam_words.json
catalog/fixtures/: catalog_fixture.json  category_fixture.json  contacts_fixture.json  product_fixture.json
catalog/migrations/: 0001_initial.py  0002_contacts.py  0003_messagefeedback.py  0004_alter_messagefeedback_phone.py  0005_alter_messagefeedback_phone.py  0006_alter_product_image.py  0007_alter_product_image.py  0008_product_brief_description_alter_product_description.py  0009_product_slug.py  0010_alter_product_slug.py  0011_alter_product_slug.py  0012_alter_messagefeedback_options_and_more.py  0013_alter_messagefeedback_email.py  0015_alter_product_image.py  (+8 more)
config/: settings.py  urls.py
templates/: base.html
users/: admin.py  forms.py  models.py  urls.py  views.py
(+48 files in other folders)
