[tool.poetry]
name = "ecommerce-app"
version = "0.1.0"
description = "Study project for creating django web application"
authors = [
    "Nadezhda_Popova <nadezhdapopova13@yandex.ru>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
django = ">=5.2.6,<6.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
pillow = ">=11.3.0,<12.0.0"
ipython = ">=9.5.0,<10.0.0"
crispy-bootstrap5 = "^2025.6"
rapidfuzz = "^3.14.1"
fuzzywuzzy = "^0.18.0"
django-countries = "^7.6.1"
django-phonenumber-field = "^8.3.0"
phonenumbers = "^9.0.16"


[build-system]
requires = "poetry-core>=2.0.0,<3.0.0"
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.18.1"
isort = "^6.0.1"

[tool.mypy]
disallow_untyped_defs=true
warn_return_any=true
exclude = """
/(
    .git
    .venv
    venv
)/
"""

[tool.black]
line-length = 119
exclude = """
/(
    .git
    .venv
    venv
)/
"""

[tool.isort]
line_length = 119
multi_line_output = 3